# flake8-eradicate

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  flake8_eradicate.py  pyproject.toml  setup.cfg
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: test.yml
tests/: conftest.py  test_comments.py  test_version.py
tests/fixtures/: correct.py  correct_no_comment.py  incorrect.py
