[tool.poetry]
name = "flake8-eradicate"
version = "1.4.0"
description = "Flake8 plugin to find commented out code"

license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/flake8-eradicate"
homepage = "https://github.com/wemake-services/flake8-eradicate"

keywords = [
  "flake8",
  "plugin",
  "linting",
  "wemake.services",
  "code quality"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.urls]
"Funding" = "https://opencollective.com/wemake-python-styleguide"

[tool.poetry.dependencies]
python = "^3.7"

flake8 = ">=3.5,<6"
eradicate = "^2.0"
attrs = "*"
importlib-metadata = { version = "*", python = "<3.8" }

[tool.poetry.group.test.dependencies]
pytest-cov = "^3.0"
pytest-randomly = "^3.10"
pytest = "^7.0"

flake8-print = "^4.0"
flake8-builtins = "^1.5"
flake8-commas = "^2.0"
flake8-quotes = "^3.2"
flake8-comprehensions = "^3.5"
flake8-docstrings = "^1.6"
flake8-string-format = "^0.3"
flake8-pep3101 = ">=1.3,<3.0"
flake8-super-call = "^1.0"
flake8-debugger = "^4.0"
flake8-isort = "^4.2"
pep8-naming = "^0.13"

mypy = "^0.971"
safety = "^2.1"

[tool.poetry.plugins."flake8.extension"]
E8 = "flake8_eradicate:Checker"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
