[tool.poetry]
name = "flake8-eradicate"
version = "1.5.0"
description = "Flake8 plugin to find commented out code"

license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/flake8-eradicate"
homepage = "https://github.com/wemake-services/flake8-eradicate"

keywords = [
  "flake8",
  "plugin",
  "linting",
  "wemake.services",
  "code quality"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.urls]
"Funding" = "https://opencollective.com/wemake-python-styleguide"

[tool.poetry.dependencies]
python = "^3.8"

flake8 = ">5"
eradicate = "^2.0"
attrs = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.3"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"

mypy = "^1.3"
safety = "^2.3"

[tool.poetry.plugins."flake8.extension"]
E8 = "flake8_eradicate:Checker"


[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
